[package]
name = "credit_faas_demo"
version = "0.2.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]

[dependencies]
fang_oost = "0.13.7"
num-complex = "0.2"
rayon = "1.0.1"
cf_functions = "0.10.0"
cf_dist_utils = "0.8"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
loan_ec = "0.1.4"
probability = "0.15.12"
[dev-dependencies]
approx = "0.2.0"
itertools = "0.8"
